# ggml

./: .gitignore
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  demo.c
examples/simple/: CMakeLists.txt  README.md  simple-ctx.cpp
